# arduino-esp32

./: CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml  package.json  platform.txt
.github/workflows/: push.yml
cores/esp32/: FirmwareMSC.h  HWCDC.cpp  HardwareSerial.h  IPAddress.cpp  IPAddress.h  main.cpp
libraries/Ethernet/src/: ETH.cpp  ETH.h
libraries/FS/src/: vfs_api.cpp
libraries/HTTPClient/src/: HTTPClient.cpp  HTTPClient.h
libraries/PPP/src/: PPP.cpp  PPP.h
libraries/Ticker/src/: Ticker.cpp
libraries/USB/src/: USBHID.cpp
libraries/Update/src/: Update.h
libraries/WebServer/src/: WebServer.cpp
libraries/WiFi/src/: WiFiClient.cpp  WiFiGeneric.cpp  WiFiGeneric.h  WiFiMulti.cpp  WiFiMulti.h  WiFiSTA.cpp  WiFiSTA.h  WiFiServer.cpp  WiFiUdp.cpp
master_cli_compile/: cli_compile_0.json  cli_compile_12.json  cli_compile_13.json  cli_compile_5.json  cli_compile_6.json  cli_compile_7.json
runtime-tests-results/: unity_results.json
tools/: pioarduino-build.py  platformio-build-esp32.py  platformio-build.py
tools/sdk/esp32/include/config/: sdkconfig.h
tools/sdk/esp32/ld/: sections.ld
variants/huidu_hd_wf2/: pins_arduino.h
